# client_bank_page

./: =  README.md  pyproject.toml
data/: .~lock.operations.xls#
src/: main.py  my_result.txt  output.csv  reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_utils.py  test_views.py
